# rust-shared-mime

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT.md  LICENSE.md  README.md
shared-mime/: Cargo.toml  README.md
shared-mime-embedded/: Cargo.toml  LICENSE.md  README.md  build.rs
shared-mime-embedded/src/: data.rs  lib.rs  tests.rs
shared-mime-embedded/src/tests/: filenames.rs  mod.rs  subclasses.rs
shared-mime-parser/: Cargo.toml
shared-mime-parser/src/: lib.rs  parse.rs  xdg_mimedef.rs
shared-mime-query/: Cargo.toml  LICENSE.md  README.md
shared-mime-query/src/: main.rs
shared-mime/src/: answer.rs  error.rs  fnmatch.rs  lib.rs  main.rs  mime_type.rs  mimedb.rs  query.rs  record.rs  search_queue.rs  strcache.rs
shared-mime/src/cli/: mod.rs
shared-mime/src/mimedb/: build.rs  mod.rs  query.rs  tests.rs
shared-mime/src/runtime/: dirs.rs  mimeinfo.rs  mod.rs  xdg_mimedef.rs  xdg_package.rs  xdg_parse.rs
src/: mime_type.rs
