[package]
name = "shared-mime-embedded"
version = "0.1.0"
edition = "2021"
license = "GPLv2+"

[dependencies]
shared-mime = { default-features = false, path = "../shared-mime" }

[features]
xdg-runtime = ["shared-mime/xdg-runtime"]

[build-dependencies]
anyhow = "^1.0"
postcard = { version = "^1.0", features = ["use-std"] }
shared-mime = { workspace = true, features = [
  "xdg-runtime",
] }
