[package]
name = "shared-mime-embedded"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
shared-mime = { version = "0.1.0", path = "../shared-mime", default-features = false }
postcard = { version = "^1.0" }

[features]
xdg-runtime = ["shared-mime/xdg-runtime"]

[build-dependencies]
anyhow = "^1.0"
postcard = { version = "^1.0", features = ["use-std"] }
shared-mime = { version = "0.1.0", path = "../shared-mime", features = [
  "xdg-runtime",
] }
