[package]
name = "shared-mime-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
quick-xml = { version = "^0.35", features = ["serialize"] }

clap = { version = "^4.5", features = ["derive"], optional = true }

[features]
cli = ["clap"]

[[bin]]
name = "test-parse"
required-features = ["cli"]
