[package]
name = "shared-mime"
version = "0.1.0-alpha1"
edition = "2021"
license = "MIT"

[dependencies]
thiserror = "^1.0"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }

# parser dependencies
quick-xml = { version = "^0.35", features = ["serialize"], optional = true }

[features]
default = ["xdg-runtime"]
xdg-runtime = ["quick-xml"]
